toolchain/FPE_assembly/grammar/FPE_assemblyParser.py
# Generated from FPE_assembly.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class FPE_assemblyParser ( Parser ):

    grammarFileName = "FPE_assembly.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'*'", "'/'", "'%'", "'+'", "'-'", "'{'", 
                     "'}'", "'GET'", "'['", "']'", "'<'", "','", "'>'", 
                     "'ADV'", "'PUT'", "'REG'", "'RAM'", "'ROM'", "'BAM'", 
                     "'FORWARD'", "'BACKWARD'", "'ZOL'", "':'", "'DEF'", 
                     "';'", "'NOP'", "'JMP'", "'JLT'", "'RESET'", "'SEEK'", 
                     "'MOV'", "'NOT'", "'CMP'", "'ADD'", "'AND'", "'OR'", 
                     "'XOR'", "'ACC'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ORB", "CRB", 
                      "DEC_NUM", "BIN_NUM", "OCT_NUM", "HEX_NUM", "IDENTIFER", 
                      "MUTL_LINE_COMMENT", "SING_LINE_COMMENT", "WHITESPACE" ]

    RULE_expr = 0
    RULE_expr_operand = 1
    RULE_jump_label = 2
    RULE_scope = 3
    RULE_access_fetch = 4
    RULE_access_store = 5
    RULE_access_imm = 6
    RULE_access_get = 7
    RULE_access_get_mod = 8
    RULE_access_put = 9
    RULE_access_reg = 10
    RULE_access_ram = 11
    RULE_access_rom = 12
    RULE_addr = 13
    RULE_addr_literal = 14
    RULE_addr_bam = 15
    RULE_addr_bam_mod = 16
    RULE_statement = 17
    RULE_state_zol = 18
    RULE_state_jump_label = 19
    RULE_state_constant = 20
    RULE_operation = 21
    RULE_op_void = 22
    RULE_op_void_nop = 23
    RULE_op_pc = 24
    RULE_op_pc_jump = 25
    RULE_op_bam = 26
    RULE_op_bam_reset = 27
    RULE_op_bam_seek = 28
    RULE_op_bam_seek_mod = 29
    RULE_op_alu = 30
    RULE_op_alu_1f_1s = 31
    RULE_op_alu_2f_0s = 32
    RULE_op_alu_2f_1s = 33
    RULE_access_fetch_alu = 34
    RULE_access_store_alu = 35

    ruleNames =  [ "expr", "expr_operand", "jump_label", "scope", "access_fetch", 
                   "access_store", "access_imm", "access_get", "access_get_mod", 
                   "access_put", "access_reg", "access_ram", "access_rom", 
                   "addr", "addr_literal", "addr_bam", "addr_bam_mod", "statement", 
                   "state_zol", "state_jump_label", "state_constant", "operation", 
                   "op_void", "op_void_nop", "op_pc", "op_pc_jump", "op_bam", 
                   "op_bam_reset", "op_bam_seek", "op_bam_seek_mod", "op_alu", 
                   "op_alu_1f_1s", "op_alu_2f_0s", "op_alu_2f_1s", "access_fetch_alu", 
                   "access_store_alu" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    ORB=39
    CRB=40
    DEC_NUM=41
    BIN_NUM=42
    OCT_NUM=43
    HEX_NUM=44
    IDENTIFER=45
    MUTL_LINE_COMMENT=46
    SING_LINE_COMMENT=47
    WHITESPACE=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.multiplicative = None # Token
            self.additive = None # Token

        def ORB(self):
            return self.getToken(FPE_assemblyParser.ORB, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FPE_assemblyParser.ExprContext)
            else:
                return self.getTypedRuleContext(FPE_assemblyParser.ExprContext,i)


        def CRB(self):
            return self.getToken(FPE_assemblyParser.CRB, 0)

        def expr_operand(self):
            return self.getTypedRuleContext(FPE_assemblyParser.Expr_operandContext,0)


        def getRuleIndex(self):
            return FPE_assemblyParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = FPE_assemblyParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FPE_assemblyParser.ORB]:
                self.state = 73
                self.match(FPE_assemblyParser.ORB)
                self.state = 74
                self.expr(0)
                self.state = 75
                self.match(FPE_assemblyParser.CRB)
                pass
            elif token in [FPE_assemblyParser.DEC_NUM, FPE_assemblyParser.BIN_NUM, FPE_assemblyParser.OCT_NUM, FPE_assemblyParser.HEX_NUM, FPE_assemblyParser.IDENTIFER]:
                self.state = 77
                self.expr_operand()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 86
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = FPE_assemblyParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 80
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 81
                        localctx.multiplicative = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FPE_assemblyParser.T__0) | (1 << FPE_assemblyParser.T__1) | (1 << FPE_assemblyParser.T__2))) != 0)):
                            localctx.multiplicative = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 82
                        self.expr(4)
                        pass

                    elif la_ == 2:
                        localctx = FPE_assemblyParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 83
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 84
                        localctx.additive = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==FPE_assemblyParser.T__3 or _la==FPE_assemblyParser.T__4):
                            localctx.additive = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 85
                        self.expr(3)
                        pass

             
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expr_operandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEC_NUM(self):
            return self.getToken(FPE_assemblyParser.DEC_NUM, 0)

        def BIN_NUM(self):
            return self.getToken(FPE_assemblyParser.BIN_NUM, 0)

        def OCT_NUM(self):
            return self.getToken(FPE_assemblyParser.OCT_NUM, 0)

        def HEX_NUM(self):
            return self.getToken(FPE_assemblyParser.HEX_NUM, 0)

        def IDENTIFER(self):
            return self.getToken(FPE_assemblyParser.IDENTIFER, 0)

        def getRuleIndex(self):
            return FPE_assemblyParser.RULE_expr_operand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_operand" ):
                listener.enterExpr_operand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_operand" ):
                listener.exitExpr_operand(self)




    def expr_operand(self):

        localctx = FPE_assemblyParser.Expr_operandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr_operand)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FPE_assemblyParser.DEC_NUM) | (1 << FPE_assemblyParser.BIN_NUM) | (1 << FPE_assemblyParser.OCT_NUM) | (1 << FPE_assemblyParser.HEX_NUM) | (1 << FPE_assemblyParser.IDENTIFER))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Jump_labelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFER(self):
            return self.getToken(FPE_assemblyParser.IDENTIFER, 0)

        def getRuleIndex(self):
            return FPE_assemblyParser.RULE_jump_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJump_label" ):
                listener.enterJump_label(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJump_label" ):
                listener.exitJump_label(self)




    def jump_label(self):

        localctx = FPE_assemblyParser.Jump_labelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_jump_label)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(FPE_assemblyParser.IDENTIFER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScopeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FPE_assemblyParser.StatementContext)
            else:
                return self.getTypedRuleContext(FPE_assemblyParser.StatementContext,i)


        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FPE_assemblyParser.OperationContext)
            else:
                return self.getTypedRuleContext(FPE_assemblyParser.OperationContext,i)


        def getRuleIndex(self):
            return FPE_assemblyParser.RULE_scope

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScope" ):
                listener.enterScope(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScope" ):
                listener.exitScope(self)




    def scope(self):

        localctx = FPE_assemblyParser.ScopeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_scope)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(FPE_assemblyParser.T__5)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FPE_assemblyParser.T__21) | (1 << FPE_assemblyParser.T__23) | (1 << FPE_assemblyParser.T__25) | (1 << FPE_assemblyParser.T__26) | (1 << FPE_assemblyParser.T__27) | (1 << FPE_assemblyParser.T__28) | (1 << FPE_assemblyParser.T__29) | (1 << FPE_assemblyParser.T__30) | (1 << FPE_assemblyParser.T__31) | (1 << FPE_assemblyParser.T__32) | (1 << FPE_assemblyParser.T__33) | (1 << FPE_assemblyParser.T__34) | (1 << FPE_assemblyParser.T__35) | (1 << FPE_assemblyParser.T__36) | (1 << FPE_assemblyParser.IDENTIFER))) != 0):
                self.state = 98
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [FPE_assemblyParser.T__21, FPE_assemblyParser.T__23, FPE_assemblyParser.IDENTIFER]:
                    self.state = 96
                    self.statement()
                    pass
                elif token in [FPE_assemblyParser.T__25, FPE_assemblyParser.T__26, FPE_assemblyParser.T__27, FPE_assemblyParser.T__28, FPE_assemblyParser.T__29, FPE_assemblyParser.T__30, FPE_assemblyParser.T__31, FPE_assemblyParser.T__32, FPE_assemblyParser.T__33, FPE_assemblyParser.T__34, FPE_assemblyParser.T__35, FPE_assemblyParser.T__36]:
                    self.state = 97
                    self.operation()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.match(FPE_assemblyParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Access_fetchContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def access_imm(self):
            return self.getTypedRuleContext(FPE_assemblyParser.Access_immContext,0)


        def access_get(self):
            return self.getTypedRuleContext(FPE_assemblyParser.Access_getContext,0)


        def access_reg(self):
            return self.getTypedRuleContext(FPE_assemblyParser.Access_regContext,0)


        def access_ram(self):
            return self.getTypedRuleContext(FPE_assemblyParser.Access_ramContext,0)


        def access_rom(self):
            return self.getTypedRuleContext(FPE_assemblyParser.Access_romContext,0)


        def getRuleIndex(self):
            return FPE_assemblyParser.RULE_access_fetch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccess_fetch" ):
                listener.enterAccess_fetch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccess_fetch" ):
                listener.exitAccess_fetch(self)




    def access_fetch(self):

        localctx = FPE_assemblyParser.Access_fetchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_access_fetch)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FPE_assemblyParser.ORB, FPE_assemblyParser.DEC_NUM, FPE_assemblyParser.BIN_NUM, FPE_assemblyParser.OCT_NUM, FPE_assemblyParser.HEX_NUM, FPE_assemblyParser.IDENTIFER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.access_imm()
                pass
            elif token in [FPE_assemblyParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.access_get()
                pass
            elif token in [FPE_assemblyParser.T__15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.access_reg()
                pass
            elif token in [FPE_assemblyParser.T__16]:
                self.enterOuterAlt(localctx, 4)
                self.state = 108
                self.access_ram()
                pass
            elif token in [FPE_assemblyParser.T__17]:
                self.enterOuterAlt(localctx, 5)
                self.state = 109
                self.access_rom()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Access_storeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def access_put(self):
            return self.getTypedRuleContext(FPE_assemblyParser.Access_putContext,0)


        def access_reg(self):
            return self.getTypedRuleContext(FPE_assemblyParser.Access_regContext,0)


        def access_ram(self):
            return self.getTypedRuleContext(FPE_assemblyParser.Access_ramContext,0)


        def getRuleIndex(self):
            return FPE_assemblyParser.RULE_access_store

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccess_store" ):
                listener.enterAccess_store(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccess_store" ):
                listener.exitAccess_store(self)




    def access_store(self):

        localctx = FPE_assemblyParser.Access_storeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_access_store)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FPE_assemblyParser.T__14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.access_put()
                pass
            elif token in [FPE_assemblyParser.T__15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.access_reg()
                pass
            elif token in [FPE_assemblyParser.T__16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.access_ram()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Access_immContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(FPE_assemblyParser.ExprContext,0)


        def getRuleIndex(self):
            return FPE_assemblyParser.RULE_access_imm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccess_imm" ):
                listener.enterAccess_imm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccess_imm" ):
                listener.exitAccess_imm(self)




    def access_imm(self):

        localctx = FPE_assemblyParser.Access_immContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_access_imm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Access_getContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def addr(self):
            return self.getTypedRuleContext(FPE_assemblyParser.AddrContext,0)


        def access_get_mod(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FPE_assemblyParser.Access_get_modContext)
            else:
                return self.getTypedRuleContext(FPE_assemblyParser.Access_get_modContext,i)


        def getRuleIndex(self):
            return FPE_assemblyParser.RULE_access_get

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccess_get" ):
                listener.enterAccess_get(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccess_get" ):
                listener.exitAccess_get(self)




    def access_get(self):

        localctx = FPE_assemblyParser.Access_getContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_access_get)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(FPE_assemblyParser.T__7)
            self.state = 120
            self.match(FPE_assemblyParser.T__8)
            self.state = 121
            self.addr()
            self.state = 122
            self.match(FPE_assemblyParser.T__9)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FPE_assemblyParser.T__10:
                self.state = 123
                self.match(FPE_assemblyParser.T__10)
                self.state = 124
                self.access_get_mod()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==FPE_assemblyParser.T__11:
                    self.state = 125
                    self.match(FPE_assemblyParser.T__11)
                    self.state = 126
                    self.access_get_mod()
                    self.state = 131
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 132
                self.match(FPE_assemblyParser.T__12)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Access_get_modContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FPE_assemblyParser.RULE_access_get_mod

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccess_get_mod" ):
                listener.enterAccess_get_mod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccess_get_mod" ):
                listener.exitAccess_get_mod(self)




    def access_get_mod(self):

        localctx = FPE_assemblyParser.Access_get_modContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_access_get_mod)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(FPE_assemblyParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Access_putContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def addr(self):
            return self.getTypedRuleContext(FPE_assemblyParser.AddrContext,0)


        def getRuleIndex(self):
            return FPE_assemblyParser.RULE_access_put

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccess_put" ):
                listener.enterAccess_put(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccess_put" ):
                listener.exitAccess_put(self)




    def access_put(self):

        localctx = FPE_assemblyParser.Access_putContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_access_put)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(FPE_assemblyParser.T__14)
            self.state = 139
            self.match(FPE_assemblyParser.T__8)
            self.state = 140
            self.addr()
            self.state = 141
            self.match(FPE_assemblyParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Access_regContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def addr(self):
            return self.getTypedRuleContext(FPE_assemblyParser.AddrContext,0)


        def getRuleIndex(self):
            return FPE_assemblyParser.RULE_access_reg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccess_reg" ):
                listener.enterAccess_reg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccess_reg" ):
                listener.exitAccess_reg(self)




    def access_reg(self):

        localctx = FPE_assemblyParser.Access_regContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_access_reg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(FPE_assemblyParser.T__15)
            self.state = 144
            self.match(FPE_assemblyParser.T__8)
            self.state = 145
            self.addr()
            self.state = 146
            self.match(FPE_assemblyParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Access_ramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def addr(self):
            return self.getTypedRuleContext(FPE_assemblyParser.AddrContext,0)


        def getRuleIndex(self):
            return FPE_assemblyParser.RULE_access_ram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccess_ram" ):
                listener.enterAccess_ram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccess_ram" ):
                listener.exitAccess_ram(self)




    def access_ram(self):

        localctx = FPE_assemblyParser.Access_ramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_access_ram)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(FPE_assemblyParser.T__16)
            self.state = 149
            self.match(FPE_assemblyParser.T__8)
            self.state = 150
            self.addr()
            self.state = 151
            self.match(FPE_assemblyParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Access_romContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def addr(self):
            return self.getTypedRuleContext(FPE_assemblyParser.AddrContext,0)


        def getRuleIndex(self):
            return FPE_assemblyParser.RULE_access_rom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccess_rom" ):
                listener.enterAccess_rom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccess_rom" ):
                listener.exitAccess_rom(self)




    def access_rom(self):
